--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             	
             </div>
         </main>
-
+        <!-- footer -->
         <footer class="py-4" style="background-color: black;">
         	<h3 class="text-center py-2 text-light m-0" style="background-color: black;">Movie Factory</h3>
         </footer>
